[gd_scene load_steps=11 format=2]

[ext_resource path="res://textures/raketa.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://textures/shield.png" type="Texture" id=3]
[ext_resource path="res://textures/ogenj_03.png" type="Texture" id=4]
[ext_resource path="res://textures/ogenj_01.png" type="Texture" id=5]
[ext_resource path="res://textures/ogenj_02.png" type="Texture" id=6]
[ext_resource path="res://textures/shield_off.png" type="Texture" id=7]
[ext_resource path="res://sounds/engin.mp3" type="AudioStream" id=8]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 7 ), null ],
"loop": false,
"name": "shield_off",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "shield_on",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ null, ExtResource( 5 ), ExtResource( 6 ), ExtResource( 4 ) ],
"loop": false,
"name": "ogenj_start",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 6 ) ],
"loop": true,
"name": "ogenj_gasa",
"speed": 15.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 5 ), null ],
"loop": false,
"name": "ogenj_bremza",
"speed": 15.0
} ]

[node name="Player" type="Area2D"]
position = Vector2( 66, 67 )
z_index = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -16, 14, -4, 14, 20, 2, 20, -2, -4, -14, -12, -14, -16, -14, -12, -14, -16, -14 )

[node name="ShieldTime" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Shield_anim" type="AnimatedSprite" parent="."]
position = Vector2( 7, -1 )
rotation = 1.5708
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 2 )
animation = "shield_on"
playing = true

[node name="Ogenj_anim" type="AnimatedSprite" parent="."]
position = Vector2( -32, 0 )
rotation = 1.5708
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 1 )
animation = "ogenj_gasa"

[node name="engin" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -12.506
pitch_scale = 1.1

[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="timeout" from="ShieldTime" to="." method="_on_ShieldTime_timeout"]
